src/components/Footer/Footer.css
.footer {
  width: 100%;
  padding: 79px 0 20px;
}

.footer__content {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 70px;
}

.footer__app-description {
  min-width: 320px;
  margin: 0;
  color: #8b8b8b;
  font-weight: normal;
  font-size: 13px;
  line-height: 16px;
  text-align: start;
}

.footer__main-container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  width: 100%;
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid #424242;
}

.footer__copyright {
  margin: 0;
  font-weight: normal;
  font-size: 13px;
  line-height: 16px;
}

.footer__social-list {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin: 0;
  padding: 0;
  gap: 20px;
  list-style-type: none;
}

.footer__social-link {
  color: #fff;
  font-weight: normal;
  font-size: 13px;
  line-height: 16px;
  text-decoration: none;
}

@media screen and (max-width: 1279px) {
  .footer__content {
    padding: 0 30px;
  }
  .footer__app-description {
    text-align: center;
  }
}

@media screen and (max-width: 767px) {
  .footer__content {
    padding: 0 14px;
  }
  .footer__app-description {
    font-size: 12px;
    line-height: 15px;
  }
  .footer__main-container {
    flex-direction: column-reverse;
    align-items: center;
  }
  .footer__copyright {
    margin-top: 30px;
    color: #8b8b8b;
    font-size: 12px;
    line-height: 15px;
  }
  .footer__social-list {
    flex-direction: column;
    align-items: center;
    gap: 12px;
  }
  .footer__social-link {
    font-size: 12px;
    line-height: 15px;
  }
}

